--- a/profil.css
+++ b/profil.css
@@ -12,6 +12,13 @@ a:link{
     width: 100%;
 }
 
+.gigasearchbar {
+    padding-top: 15px;
+    padding-left: 2%;
+    width:95%;
+    height: 80px;
+}
+
 .header {
     width: 100%;
     height: 80px;
@@ -34,7 +41,7 @@ a:link{
 .btncreerunprofil {
     padding-top: 5px;
     float: left;
-    width:25%;
+    width:50%;
     height: 50px;
     text-align: right;
 }
@@ -152,7 +159,7 @@ input[type=text] {
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
-    font-size: 16px;
+    font-size: 20px;
     background-color: white;
     background-image: url('image/searchicon.png');
     background-size: 25px;
