--- a/formulaire.css
+++ b/formulaire.css
@@ -34,7 +34,7 @@ a:link{
 .btncreerunprofil {
     padding-top: 5px;
     float: left;
-    width:25%;
+    width:50%;
     height: 50px;
     text-align: right;
 }
@@ -70,7 +70,7 @@ input[name=nom] {
     transition: width 0.4s ease-in-out;
 }
 
-input[name=prénom] {
+input[name=prenom] {
     width: 100%;
     box-sizing: border-box;
     border: 2px solid #ccc;
