--- a/profil.css
+++ b/profil.css
@@ -31,10 +31,10 @@ a:link{
     height: 80px;
 }
 
-.barrederechercheheader {
+.gigasearchbar {
     padding-top: 15px;
-    float: left;
-    width:25%;
+    padding-left: 2%;
+    width:95%;
     height: 80px;
 }
 
@@ -48,7 +48,7 @@ a:link{
 
 .title {
     width: 100%;
-    height: 50px;
+    height: 80px;
     background-color: #8b9dc3;
 }
 
