--- a/formulaire.css
+++ b/formulaire.css
@@ -100,7 +100,7 @@ input[name=url] {
     transition: width 0.4s ease-in-out;
 }
 
-input[name=date] {
+input[name=datedenaissance] {
     width: 100%;
     box-sizing: border-box;
     border: 2px solid #ccc;
