--- a/profil.css
+++ b/profil.css
@@ -78,7 +78,7 @@ a:link{
 }
 
 .contenulistcontact img {
-    height:70px ;
+    height:70px;
     width:70px;
 }
 
@@ -86,8 +86,9 @@ img {
     display:block;
     margin-left:auto;
     margin-right:auto;
-    height:300px ;
+    height:300px;
     width:300px;
+    border-radius: 50%;
 }
 
 .contenulistcontact {
