--- a/profil.css
+++ b/profil.css
@@ -77,6 +77,16 @@ a:link{
     display: block;
 }
 
+.contenuprofil td {
+    color: black;
+    padding-left: 20px;
+    font-size: 14px;
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid #8b9dc3;
+    width: 50%;
+}
+
 .contenulistcontact img {
     height:70px;
     width:70px;
@@ -200,6 +210,7 @@ table {
 }
 
 th {
+    padding: 8px;
     text-align: left;
     border-bottom: 1px solid #8b9dc3;
     color: #3b5998;
@@ -209,10 +220,12 @@ th {
 
 td {
     color: black;
+    padding-left: 20px;
     font-size: 14px;
-    padding: 10px;
+    padding: 8px;
     text-align: left;
     border-bottom: 1px solid #8b9dc3;
+    width: 10%;
 }
 
  tr:hover {
